Removed arrow function shorthand from code

--- a/exm-token-input-dropdown.html
+++ b/exm-token-input-dropdown.html
@@ -82,9 +82,9 @@
 
 			_handleItemTap: function(e) {
 				e.preventDefault();
-				setTimeout(() => {
+				this.async(function(){
 					this.fire('item-selected', e.target.name);
-				},300);
+				}.bind(this), 300);
 				e.stopPropagation();
 			},
 
