--- a/exm-token-input.html
+++ b/exm-token-input.html
@@ -74,18 +74,38 @@ Paper style token input element
 			}
 		</style>
 
-		<paper-input-container always-float-label="[[_computeAlwaysFloatLabel(value, alwaysFloatLabel)]]" attr-for-value="value" on-tap="_handleContainerTap" disabled$="[[disabled]]" invalid="[[invalid]]">
+		<paper-input-container
+			always-float-label="[[_computeAlwaysFloatLabel(value, alwaysFloatLabel)]]"
+			attr-for-value="value"
+			on-tap="_handleContainerTap"
+			disabled$="[[disabled]]"
+			invalid="[[invalid]]">
 
-			<label hidden$="[[!label]]" aria-hidden="true" for="input">[[label]]</label>
+			<label id="label" hidden$="[[!label]]" aria-hidden="true" for="input">[[label]]</label>
 
 			<content select="[prefix]"></content>
 
 			<div class="container">
 				<span class="tokens">
-					<template is="dom-repeat" items="[[_valueAsItemArray(value, _modeDropDown)]]" as="token">
-						<paper-button tabindex="-1" on-tap="_handleDeleteToken" data-token$="[[_getItemValue(token)]]">[[_getItemLabel(token)]]<iron-icon icon="clear"></iron-icon></paper-button>
+					<template
+						is="dom-repeat"
+						items="[[_valueAsItemArray(value, _modeDropDown)]]"
+						as="token">
+						<paper-button
+							tabindex="-1"
+							on-tap="_handleDeleteToken"
+							data-token$="[[_getItemValue(token)]]">[[_getItemLabel(token)]]<iron-icon icon="clear"></iron-icon></paper-button>
 					</template>
-					<input id="inputValue" is="iron-input" bind-value="{{_inputValue}}" allowed-pattern="[[allowedPattern]]" prevent-invalid-input="[[preventInvalidInput]]" disabled$="[[disabled]]">
+					<input
+						id="inputValue"
+						is="iron-input"
+						aria-labelledby="label"
+						bind-value="{{_inputValue}}"
+						allowed-pattern="[[allowedPattern]]"
+						prevent-invalid-input="[[preventInvalidInput]]"
+						autofocus$="[[autofocus]]"
+						autocomplete="off"
+						disabled$="[[disabled]]">
 				</span>
 			</div>
 
@@ -182,6 +202,10 @@ Paper style token input element
 					value: false
 				},
 
+				autofocus: {
+					type: Boolean
+				},
+
 				/**
 				* The error message to display when the input is invalid.
 				*/
@@ -255,7 +279,6 @@ Paper style token input element
 			listeners: {
 				'inputValue.keyup': '_handleUpDown',
 				'inputValue.focus': '_handleInputFocus',
-				'inputValue.blur': '_handleInputBlur',
 				'item-selected': '_handleItemSelected'
 			},
 
@@ -428,8 +451,8 @@ Paper style token input element
 			},
 
 			_handleUpDown: function(event) {
+				event.preventDefault();
 				if(this._hasDropDown && this.$.dropdownInput.dropdown.opened) {
-					event.preventDefault();
 					var ironSelector = this.$$('iron-selector');
 					if (event.keyCode === 38) {
 						if(ironSelector.selected) {
@@ -443,7 +466,6 @@ Paper style token input element
 						}
 					}
 				} else if(event.keyCode === 38 || event.keyCode === 40){
-					event.preventDefault();
 					this._openDropdown();
 				}
 			},
@@ -516,6 +538,7 @@ Paper style token input element
 			},
 
 			_handleContainerTap: function(e) {
+				this._openDropdown();
 				this.focus();
 			},
 
@@ -526,16 +549,7 @@ Paper style token input element
 			},
 
 			_handleInputFocus: function(e) {
-				this._openDropdown();
 				this._triggerComputeFloatLabel();
-			},
-
-			_handleInputBlur: function() {
-				this._triggerComputeFloatLabel();
-				this._autoValidate();
-				if(this._hasDropDown && this.$.dropdownInput.dropdown.opened) {
-					this.$.dropdownInput.close();
-				}
 			},
 
 			_triggerComputeFloatLabel: function() {
@@ -549,7 +563,6 @@ Paper style token input element
 			 */
 			focus: function() {
 				this.$.inputValue.focus();
-				this._openDropdown();
 			},
 
 			_getValidity: function() {
