syntax style error in function name

--- a/exm-token-input.html
+++ b/exm-token-input.html
@@ -363,7 +363,7 @@ Paper style token input element
 			/**
 			 * This method will automaticly set the label float.
 			 */
-			_computeAlwaysFloatLabel(value, alwaysFloatLabel) {
+			_computeAlwaysFloatLabel: function(value, alwaysFloatLabel) {
 				if(alwaysFloatLabel) {
 					return true;
 				}
