--- a/exm-token-input.html
+++ b/exm-token-input.html
@@ -81,7 +81,7 @@ Paper style token input element
 			disabled$="[[disabled]]"
 			invalid="[[invalid]]">
 
-			<label id="label" hidden$="[[!label]]" aria-hidden="true" for="input">[[label]]</label>
+			<label id="label" hidden$="[[!label]]" aria-hidden="true" for="inputValue">[[label]]</label>
 
 			<content select="[prefix]"></content>
 
