--- a/demo/index.html
+++ b/demo/index.html
@@ -40,7 +40,7 @@
 			<demo-snippet>
 				<template>
 					<exm-token-input id="dif1" label="Users" value="Ronna"></exm-token-input>
-					<exm-token-input id="dif2" label="Users (Default item path)" value="1,3"></exm-token-input>
+					<exm-token-input id="dif2" label="Users (Default item path)" value="1,3" allowed-duplicate-values></exm-token-input>
 					<exm-token-input id="dif3" label="Users (Custom item path)" value="2" data-value-path="id" data-label-path="name"></exm-token-input>
 					<exm-token-input id="dif4" label="Users (Custom item deep path)" value="3" data-value-path="user.id" data-label-path="user.name"></exm-token-input>
 					<script>
