Added initial test for element

--- a/exm-token-input.html
+++ b/exm-token-input.html
@@ -212,6 +212,14 @@ Paper style token input element
 				},
 
 				/**
+				* Set to true to disable this input.
+				*/
+				disabled: {
+					type: Boolean,
+					value: false
+				},
+
+				/**
 				* The error message to display when the input is invalid.
 				*/
 				errorMessage: {
