--- a/demo/index.html
+++ b/demo/index.html
@@ -25,10 +25,12 @@
 					<exm-token-input label="Animals (Auto validate)" value="" required auto-validate></exm-token-input>
 					<exm-token-input label="Animals (Auto validate + Error message)" value="Cat" required auto-validate error-message="Input is required!"></exm-token-input>
 					<exm-token-input id="tokenInput" label="Animals" value="Cat" required></exm-token-input>
+					<exm-token-input id="tokenInput2" label="Animals" value="Cat" ></exm-token-input>
 					<button onclick="validate()">Validate!</button>
 					<script>
 						function validate() {
 							document.getElementById('tokenInput').validate();
+							document.getElementById('tokenInput2').validate();
 						}
 					</script>
 				</template>
