--- a/exm-token-input.html
+++ b/exm-token-input.html
@@ -295,8 +295,7 @@ Paper style token input element
 
 				_tokens: {
 					type: Array,
-					computed: '_valueAsItemArray(value, _modeDropDown)',
-					observer: '_observeTokens'
+					computed: '_valueAsItemArray(value, _modeDropDown)'
 				}
 			},
 
@@ -328,10 +327,6 @@ Paper style token input element
 			 */
 			get inputElement() {
 				return this.$.inputValue;
-			},
-
-			_observeTokens: function() {
-				console.log('_observeTokens');
 			},
 
 			attached: function() {
@@ -551,7 +546,6 @@ Paper style token input element
 			},
 
 			_addToken: function(item) {
-				console.log('_addToken', item);
 				var values = this._valueAsArray();
 				if(this.maxTokens && values.length >= this.maxTokens) {
 					return;
@@ -611,7 +605,6 @@ Paper style token input element
 				if(this._hasDropDown && !this.$.dropdownInput.dropdown.opened) {
 					this.$.dropdownInput.open();
 					this.$$('iron-selector').selected = this.$$('iron-selector').selected || 0;
-					console.log('OPEN', this.$$('iron-selector').selected);
 				}
 			},
 
