Long copy in demo token

--- a/demo/index.html
+++ b/demo/index.html
@@ -24,6 +24,7 @@
 				<template>
 					<exm-token-input label="Animals (Auto validate)" value="" required auto-validate></exm-token-input>
 					<exm-token-input label="Animals (Auto validate + Error message)" value="Cat" required auto-validate error-message="Input is required!"></exm-token-input>
+					<exm-token-input id="tokenInput" label="Animals" value="Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. "></exm-token-input>
 					<exm-token-input id="tokenInput" label="Animals" value="Cat" required></exm-token-input>
 					<exm-token-input id="tokenInput2" label="Animals" value="Cat" ></exm-token-input>
 					<button onclick="validate()">Validate!</button>
